# presence_sensor

./: .gitignore  CMakeLists.txt  README.md  SECURITY_SETUP.md  sdkconfig.defaults
components/ha_mqtt/: CMakeLists.txt  ha_mqtt.c
components/ha_mqtt/include/: ha_mqtt.h
components/ld2411/: CMakeLists.txt  ld2411.c
components/ld2411/include/: ld2411.h
components/ld2420/: CMakeLists.txt  ld2420.c
components/ld2420/include/: ld2420.h
components/ld2420_simple/: CMakeLists.txt  ld2420_simple.c
components/ld2420_simple/include/: ld2420_simple.h
components/sensor_info/: CMakeLists.txt  sensor_info.c
components/sensor_info/include/: sensor_info.h
config/: .gitignore  secrets.h.template
main/: CMakeLists.txt  main.c
